# carla_drl

./: .coveragerc  .gitignore  .pylintrc  README.md  measure_speed.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: python-tests.yml
carla_drl/autoencoder/: dataset.py  model.py  train.py
carla_drl/depth_estimation/: dataset.py  midas.py  train.py  utils.py
carla_drl/lane_following/: agent.py  encoder.py  model.py  parameters.py  train.py
carla_drl/semantic_segmentation/: dataset.py  joint_transforms.py  train.py  unet.py  utils.py
examples/: semantic_segmentation.ipynb  vae.ipynb
simulation/: connection.py  environment.py  sensors.py  settings.py  sync_data_generation.py
tests/: test_ae_model.py  test_de_dataset.py  test_de_midas.py  test_lf_agent.py  test_lf_encoder.py  test_lf_model.py  test_ss_dataset.py  test_ss_unet.py
